access validate and cors config
